# retail-invoice

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  RetailInvoice.spec  VERSION  build.bat  categories.py  config.py  database.py  email_service.py  index.html  inventory_list.py  main.py  models.py  package-lock.json  package.json  printer.py  product_import.py  receipt_builder.py  receipt_pdf.py  requirements.txt  utils.py  vite.config.ts  vitest.config.ts
.github/workflows/: build-windows.yml  ci.yml  release.yml
assets/: product_import_template.csv  product_import_template.xlsx
legacy/: README.md  config.py  database.py  main.py  receipt_builder.py  requirements.txt  utils.py
legacy/assets/: .gitkeep  product_import_template.csv  product_import_template.xlsx
legacy/ui/: app.py  dialogs.py  reports_tab.py
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: EmptyState.tsx  IslandNav.tsx  ReceiptViewer.tsx  ShortcutsPanel.tsx  StatusPill.tsx  Toast.tsx  ui.tsx
src/db/: client.ts  queries.test.ts  queries.ts
src/lib/: importProducts.ts  money.test.ts  money.ts  platform.ts  receiptPdf.ts  status.ts  types.ts  viewport.ts
src/pages/: HistoryPage.tsx  ProductsPage.tsx  SalePage.tsx  SetupPage.tsx  SetupWizard.tsx
src/theme/: ThemeProvider.tsx
tests/: test_import_and_totals.py
ui/: app.py  dialogs.py  inventory_tab.py  invoice_tab.py  receipt_viewer.py  reports_tab.py  settings_tab.py  setup_wizard.py  theme.py  toast.py
(+1 files in other folders)
